# authentic

./: AUTHORS  CMakeLists.txt  README.md  go  meson.build
data/: authentic.appdata.xml.in  authentic.desktop.in  cssresource.xml
data/style/: elements.css  text.css
data/styles/: index.css
po/: POTFILES  com.github.xendke.authentic.pot  es.po  it.po
src/: App.vala  Application.vala
src/Dialogs/: NewAccountDialog.vala
src/Services/: StyleManager.vala  TOTPManager.vala  TOTPTimer.vala
src/Widgets/: AccountItem.vala  AccountWidget.vala  Spacer.vala
src/Window/: MainWindow.vala
